--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>A history of browsers</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>A history of browsers</h1>
@@ -16,7 +16,6 @@
   <a href="#ff">Fireforx</a>
   <a href="#chrome">Chrome</a>
 </nav>
-</ul>
 <h2 id="intro">Introduction</h2>
 <p>The first web browser was invented in 1990 by Tim Berners-Lee. It was called <a
     href="https://en.wikipedia.org/wiki/World_Wide_Web">WorldWideWeb</a> (no spaces) and was later renamed Nexus. In
@@ -29,7 +28,7 @@
   stymie standards efforts. Both Microsoft and Netscape liberally incorporated proprietary extensions to HTML in their
   products, and tried to gain an edge by product differentiation, leading to the acceptance of the Cascading Style
   Sheets proposed by Hakon Wium Lie over Netscape's JavaScript Style Sheets (JSSS) by W3C.</p>
-<div id="left">
+<div class="left">
   <h2 id="ie">A brief history of IE</h2>
   <img src="http://upload.wikimedia.org/wikipedia/en/1/10/Internet_Explorer_7_Logo.png" width="100px">
   <p>The first <a href="https://www.microsoft.com/en-us/download/internet-explorer.aspx">Internet Explorer</a> was
@@ -48,7 +47,8 @@
     well as full compliance for Cascading Style Sheets 2.1. It was also the first version to successfully pass the Acid2
     test. In addition, Internet Explorer 8 included new features such as WebSlices and an improved phishing filter.</p>
 </div>
-<div id="center"><h2 id="ff">A brief history of Firefox</h2>
+<div class="center">
+  <h2 id="ff">A brief history of Firefox</h2>
   <img src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png" width="100px">
   <p>The project which became <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> started as an
     experimental
@@ -61,7 +61,8 @@
     monitor
     among other things.</p>
 </div>
-<div id="right"><h2 id="chrome">A brief history of Chrome</h2>
+<div class="right">
+  <h2 id="chrome">A brief history of Chrome</h2>
   <img src="http://upload.wikimedia.org/wikipedia/commons/e/e2/Google_Chrome_icon_%282011%29.svg" width="100px">
   <p>Google's Eric Schmidt opposed the development of an independent web browser for six years. He stated that "at the
     time, Google was a small company," and he did not want to go through "bruising browser wars." After co-founders
